--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thoriza</title>
+    <title>THORIZA</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilo.css">
 </head>
@@ -86,6 +86,24 @@
             <h4>BODY BASEMENT</h4>
             <h5>Precio: $1680</h5>
         </div>
+        <div class="productos">
+            <img src="assets/tienda4.jpg" class="producto" alt="Producto">
+            <hr>
+            <h4>CROP TOP GLIT</h4>
+            <h5>Precio: $1495</h5>
+        </div>
+        <div class="productos">
+            <img src="assets/tienda5.jpg" class="producto" alt="Producto">
+            <hr>
+            <h4>CAMISA JUSTIN</h4>
+            <h5>Precio: $2990</h5>
+        </div>
+        <div class="productos">
+            <img src="assets/tienda6.jpg" class="producto" alt="Producto">
+            <hr>
+            <h4>BODY MILOI</h4>
+            <h5>Precio: $1850</h5>
+        </div>
 
     </div>
 
@@ -155,6 +173,7 @@
     </footer>
 
     <!-- SCRIPT -->
+    <script src="js/app.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/27bc2ce0d8.js" crossorigin="anonymous"></script>
 
