--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>THORIZA</title>
+    <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/estilo.css">
 </head>
@@ -15,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container-fluid">
-                <img class="logo" src="/assets/thoriza.png" alt="Logo">
+                <img class="logo" src="assets/thoriza.png" alt="Logo">
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
@@ -33,6 +34,10 @@
                         </li>
                         <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
                     </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="¿Que buscas?" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Buscar</button>
+                    </form>
                 </div>
             </div>
         </nav>
@@ -43,7 +48,7 @@
     <div class="banner">
         <img class="banner__bg" src="assets/thoriza.gif"></img>           
         <div class="banner__content">
-            <h1>Thoriza</h1>
+            <h1 class="animate__animated animate__backInLeft">Thoriza</h1>
             <h2>Indumentaria femenina</h2>
             <span></span>
             <p>#MILOOKTHORIZA</p>
@@ -68,41 +73,47 @@
         <hr>
     </div>
     <div class="tienda">
-        <div class="productos">
-            <img src="assets/tienda1.jpg" class="producto" alt="Producto">
+        <div class="productos wow animate__animated animate__zoomIn">
+            <img src="assets/tienda1.jpg" class="producto img-fluid" alt="Producto">
             <hr>
             <h4>CAMPERA GIMMY</h4>
             <h5>Precio: $5600</h5>
+            <button class="button-tienda">Agregar al carrito</button>
         </div>
-        <div class="productos">
-            <img src="assets/tienda2.jpg" class="producto" alt="Producto">
+        <div class="productos wow animate__animated animate__zoomIn">
+            <img src="assets/tienda2.jpg" class="producto img-fluid" alt="Producto">
             <hr>
             <h4>CAMPERA YULIAM</h4>
             <h5>Precio: $4400</h5>
+            <button class="button-tienda">Agregar al carrito</button>
         </div>
-        <div class="productos">
-            <img src="assets/tienda3.jpg" class="producto" alt="Producto">
+        <div class="productos wow animate__animated animate__zoomIn">
+            <img src="assets/tienda3.jpg" class="producto img-fluid" alt="Producto">
             <hr>
             <h4>BODY BASEMENT</h4>
             <h5>Precio: $1680</h5>
+            <button class="button-tienda">Agregar al carrito</button>
         </div>
-        <div class="productos">
-            <img src="assets/tienda4.jpg" class="producto" alt="Producto">
+        <div class="productos wow animate__animated animate__zoomIn">
+            <img src="assets/tienda4.jpg" class="producto img-fluid" alt="Producto">
             <hr>
             <h4>CROP TOP GLIT</h4>
             <h5>Precio: $1495</h5>
+            <button class="button-tienda">Agregar al carrito</button>
         </div>
-        <div class="productos">
-            <img src="assets/tienda5.jpg" class="producto" alt="Producto">
+        <div class="productos wow animate__animated animate__zoomIn">
+            <img src="assets/tienda5.jpg" class="producto img-fluid" alt="Producto">
             <hr>
             <h4>CAMISA JUSTIN</h4>
             <h5>Precio: $2990</h5>
+            <button class="button-tienda">Agregar al carrito</button>
         </div>
-        <div class="productos">
-            <img src="assets/tienda6.jpg" class="producto" alt="Producto">
+        <div class="productos wow animate__animated animate__zoomIn">
+            <img src="assets/tienda6.jpg" class="producto img-fluid" alt="Producto">
             <hr>
             <h4>BODY MILOI</h4>
             <h5>Precio: $1850</h5>
+            <button class="button-tienda">Agregar al carrito</button>
         </div>
 
     </div>
@@ -173,6 +184,10 @@
     </footer>
 
     <!-- SCRIPT -->
+    <script src="js/wow.min.js"></script>
+    <script>
+        new WOW().init();
+    </script>
     <script src="js/app.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="https://kit.fontawesome.com/27bc2ce0d8.js" crossorigin="anonymous"></script>
