--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <p class="d-inline-block ms-3">/thoriza.ind</p>
                 </a>
                 
-                <a href="https://www.instagram.com/thoriza.ind/" target="_blank">
+                <a href="https://www.facebook.com/profile.php?id=100055621801258" target="_blank">
                     <i class="fab fa-facebook" alt="Facebook"></i>
                     <p class="d-inline-block ms-3">/thoriza.ind</p>
                 </a>
@@ -198,14 +198,14 @@
                     <p class="d-inline-block ms-3">/thoriza.ind</p>
                 </a>
 
-                <a href="https://www.instagram.com/thoriza.ind/" target="_blank">
+                <a href="https://wa.me/1164861595" target="_blank">
                     <i class="fas fa-phone-alt" alt="Telefono contacto"></i>
-                    <p class="d-inline-block ms-3">+54 11 2298 7891</p>
+                    <p class="d-inline-block ms-3">+54 11 6486 1595</p>
                 </a>
 
-                <a href="https://www.instagram.com/thoriza.ind/" target="_blank">
+                <a href="mailto:thoriza.ind@gmail.com" target="_blank">
                     <i class="fas fa-envelope" alt="Correo electronico contacto" ></i>
-                    <p class="d-inline-block ms-3">thoriza@gmail.com</p>
+                    <p class="d-inline-block ms-3">thoriza.ind@gmail.com</p>
                 </a>
             </div>
         </div>
