--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 
 
-    <a href="https://wa.me/1164861595" target="_blank">   <img id="whatsapp" src="./assets/whatsapp-icon.png" alt="whatsapp">    </a>
+    <a href="https://wa.me/+5491164861595" target="_blank">   <img id="whatsapp" src="./assets/whatsapp-icon.png" alt="whatsapp">    </a>
 
 
     <!-- HEADER -->
