--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" aria-current="page" href="#banner">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#nosotros">Sobre Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link" href="../pages/tienda.html">Tienda</a></li>
+                        <li class="nav-item"><a class="nav-link" href="pages/tienda.html">Tienda</a></li>
                         <li class="nav-item"><a class="nav-link" href="#contacto">Contacto</a></li>
                     </ul>
                 </div>
